fix: fix popular card image overflow

--- a/webapp/src/main/webapp/resources/css/landingPage.css
+++ b/webapp/src/main/webapp/resources/css/landingPage.css
@@ -98,11 +98,11 @@ p {
     transform: scale(1.02);
 }
 
-.popularCard img {
+.popularCard div img {
     transition: transform .5s ease;
 }
 
-.popularCard:hover img {
+.popularCard:hover div img {
     transform: scale(1.02);
 }
 
